--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -20,7 +20,7 @@
             <div class="d-flex justify-content-center">
               <button class="btn btn-light" (click)='cadastrar()'>Cadastrar</button>
             </div>
-  
+   
           </div>
         </div>
   
@@ -53,8 +53,10 @@
             <th>{{item.id}}</th>
             <td>{{item.descricao}}</td>
             <td class="d-flex justify-content-end">
-                <button class="btn btn-info mr-3">Editar</button>
-                <button class="btn btn-danger">Apagar</button>
+              <button class="btn btn-info mr-3" [routerLink]="['/tema-edit', item.id]"
+              routerLinkActive="router-link-active">Editar</button>
+              <button class="btn btn-danger" [routerLink]="['/tema-delete', item.id]"
+              routerLinkActive="router-link-active">Apagar</button>
             </td>
            
           </tr>
