--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,7 +1,18 @@
-.fs-16{
+fs-16{
     font-size: 16pt;
 }
 
 a{
     cursor: pointer;
+}
+
+.texto{
+
+color: chartreuse;
+  
+}
+
+.foto{
+    width: 50px;
+    height: 50px;
 }
