--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-light  bg-secondary">
     <button class="navbar-toggler" type="button" data-toggle="collapse"         data-target="#conteudoNavbarSuportado"
         aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
         <span class="navbar-toggler-icon"></span>
@@ -7,14 +7,15 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
         <ul class="navbar-nav mr-auto d-flex align-items-center">
             <li class="nav-item active">
-                <img src={{foto}} alt="Foto do usuario" width="50px" height="50px"
-                    class="img-fluid rounded-circle">
+                <img src="{{foto}}" alt="Foto do usuario"
+                    class="img-fluid rounded-circle foto">
+            </li> 
+            <li class="nav-item pl-3">
+                <p class="m-0  font-weight-bold text-white fs-16"> Olá {{nome}}</p>
             </li>
             <li class="nav-item pl-3">
-                <p class="m-0 font-weight-bold text-white fs-16">{{nome}}</p>
-            </li>
-            <li class="nav-item pl-3">
-                <a href="">
+                <a [routerLink]="['/user-edit', id]"
+                routerLinkActive="router-link-active">
                     <p class="text-white fs-16 m-0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></p>
                 </a>
                 
@@ -22,7 +23,7 @@
         </ul>
         <ul class="navbar-nav ml-auto d-flex align-items-center">
             <li class="nav-item pl-3">
-                <a (click)='sair()' class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                <a class="m-0 font-weight-bold text-white fs-16" (click)='sair()'>Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
             </li>
         </ul>
     </div>
